@@ -2,6 +2,7 @@ vX.Y.Z (YYYY-MM-DD)
 
 - build: add --data flat to specify where datagen will create flat files when
   not doing a streaming load
+- mysql: build-db minimal fixes to work with 8.0
 
 v0.61.4 (2024-08-12)
 
